# HMM

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
include/HMM/: BaumWelchAlgorithm.h  HMM.h  InitialStateProbabilityDistribution.h  Model.h  StateEmissionProbabilityDistributionMatrix.h  StateTransitionProbabilityDistributionMatrix.h
src/: BaumWelchAlgorithm.cpp  HMM.cpp  InitialStateProbabilityDistribution.cpp  Model.cpp  StateEmissionProbabilityDistributionMatrix.cpp  StateTransitionProbabilityDistributionMatrix.cpp
test/: BaumWelchAlgorithmTests.cpp  CMakeLists.txt  InitialStateProbabilityDistributionTests.cpp  ModelTests.cpp  StateEmissionProbabilityDistributionMatrixTests.cpp  StateTransitionProbabilityDistributionMatrixTests.cpp  StateTransitionProbabilityDistributionMatrixTests.h
